--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_DB=anuncios
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=Awapost33
-
+POSTGRES_PASSWORD=Contr@s3na44
